# BenchWeb

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  bw  entrypoint.sh  get_maintainers.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/github_actions/: get_maintainers.py  github_actions_diff.py
.github/workflows/: build.yml  ci-pipeline.yml  get-maintainers.yml
benchmarks/: __init__.py  abstract_test_type.py  benchmarker.py  framework_test.py  run-tests.py  verifications.py
benchmarks/benchmark/: benchmarker.py  framework_test.py
benchmarks/cached-query/: cached-query.py
benchmarks/databases/: __init__.py  abstract_database.py
benchmarks/db/: db.py
benchmarks/fortune/: fortune.py  fortune_html_parser.py
benchmarks/github_actions/: get_maintainers.py  github_actions_diff.py
benchmarks/json/: json.py
benchmarks/plaintext/: plaintext.py
benchmarks/query/: query.py
benchmarks/test_types/: __init__.py  abstract_test_type.py  verifications.py
benchmarks/update/: update.py
benchmarks/utils/: audit.py  benchmark_config.py  docker_helper.py  metadata.py  results.py  scaffolding.py  time_logger.py
frameworks/: framework-metadata.json
frameworks/CSharp/: README.md
frameworks/Haskell/warp/shared/bw-hasql/: README.md  bw-hasql.cabal
frameworks/Haskell/warp/shared/bw-hasql/BW/: Db.hs
frameworks/Haskell/warp/shared/bw-mysql-haskell/: README.md  bw-mysql-haskell.cabal
frameworks/Haskell/warp/shared/bw-mysql-haskell/BW/: Db.hs
frameworks/Java/: README.md
frameworks/OCaml/morph/src/: dune-project  esy.json
frameworks/PHP/: README.md
frameworks/Python/: README.md
frameworks/Ruby/: README.md
frameworks/Swift/: README.md
frameworks/VB/: README.md
infrastructure/docker/: Dockerfile  entry.sh  entrypoint.sh
scripts/: bw-fail-detector.py  fail-detector.py  run-tests.py
toolset/: run-tests.py
utils/: audit.py  benchmark_config.py  docker_helper.py  get_maintainers.py  metadata.py  results.py  scaffolding.py  time_logger.py
(+1141 files in other folders)
