(lang dune 2.6)

(name morph-bw)

(generate_opam_files true)

(authors "Ulrik Strid")

(maintainers "ulrik.strid@outlook.com")

(package
 (name morph-bw)
 (synopsis "Framework Benchmark for Morph")
 (depends
  (ocaml
   (>= 4.11.0))
  archi
  archi-lwt
  caqti-driver-postgresql
  caqti
  caqti-lwt
  conf-libev
  dune
  fmt
  logs
  lwt
  routes
  uri
  yojson
  morph
  piaf
  reason
  tyxml
  tyxml-jsx
  ppx_rapper))
